--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 
 /*font-family: 'Raleway', sans-serif;*/
 /*font-family: 'Roboto', sans-serif;*/
-
+body {
+    font-family: 'Roboto', sans-serif;
+    color: #757575;
+}
 /*Header*/
 .logo {
     Font-family: Raleway;
-    font-style: normal;
     font-weight: bold;
     font-size: 26px;
     line-height: 31px;
@@ -13,8 +15,6 @@
     color: #2196F3;
 }
 .studio{
-    Font-family: Raleway;
-    font-style: normal;
     font-weight: bold;
     font-size: 26px;
     line-height: 31px;
@@ -22,8 +22,6 @@
     color: black;
 }
 .head {
-    font-family: Roboto;
-    font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
@@ -37,8 +35,6 @@
     color: #2196F3;
 }
 .info{
-    font-family: Roboto;
-    font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
@@ -50,4 +46,105 @@
 .info:focus
 {
     color: #2196F3;
+}
+
+/*main*/
+.osnovnaya{
+    background-color: #2F303A;
+}
+h1{
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 136%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: #FFFFFF;
+}
+h2{
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    /*text-align: center;*/
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+h3{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    /*text-align: center;*/
+    letter-spacing: 0.03em;
+
+    color: #212121;
+}
+button {
+    cursor: pointer;
+}
+.butt-zak{
+    width: 200px;
+    height: 50px;
+    left: 700px;
+    top: 430px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+}
+.h3-text{
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.03em;
+}
+.proffesia{
+    font-size: 16px;
+    line-height: 19px;
+    /*text-align: center;*/
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+/*Porfolio.html*/
+
+/*section -work*/
+.work-select
+{
+    display:inline-block;
+    background: #F5F4FA;
+    /*border-radius: 4px;*/
+    /*padding: 6px 22px;*/
+    /*background: #F5F4FA;*/
+    /*border-radius: 4px;*/
+    /*padding: 6px 22px;*/
+}
+.work-select-a
+{
+    display: block;
+    text-decoration: none;
+    border-radius: 4px;
+    padding: 6px 22px;
+}
+.work-select-a:hover,
+.work-select-a:focus
+{
+    background: #2196F3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    color: white;
+    text-decoration: none;
+}
+.work-ul
+{
+    text-align: center;
+}
+.port-h3
+{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 200%;
+    letter-spacing: 0.06em;
+}
+.port-p
+{
+    font-size: 16px;
+    line-height: 187% ;
+    letter-spacing: 0.03em;
 }
